lots of changes, this may be 0.1 of the blog!